Correcting spacing & bugs

--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -21,6 +21,8 @@ aside {
 
   .aside-container {
     position: relative;
+    background-color: var(--white10-color);
+    border-radius: 2rem 2rem 0 2rem;
   }
 
   .aside-content {
@@ -28,16 +30,16 @@ aside {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-row-gap: 10px;
-    background-color: var(--white10-color);
+    grid-row-gap: 1.25rem;
     border-radius: 2rem 2rem 0 2rem;
     overflow: scroll;
 
     & * {
       height: 100px;
       width: 100%;
-      background-color: var(--white25-color);
+      background-color: var(--white10-color);
     }
+
   }
 
   .aside-fixed-bottom {
@@ -62,6 +64,5 @@ aside {
     }
 
   }
-
 
 }
