--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -19,35 +19,40 @@ main {
   }
 
   .main-content {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(10, 200px);
-    grid-column-gap: 1.25rem;
-    grid-row-gap: 1.25rem; 
-    overflow: scroll;
-    position: absolute;
-    height: 100%;
-    width: 100%;
+    position: relative;
 
-    & * {
-      background-color: var(--white25-color);
-      border-radius: 2rem;
+    .main-grid {
+
+      position: absolute;
+      display: grid;
+      height: 100%;
+      width: 100%;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(10, 200px);
+      grid-column-gap: 1.25rem;
+      grid-row-gap: 1.25rem; 
+      overflow: scroll;
+
+      & * {
+        background-color: var(--white10-color);
+        border-radius: 2rem;  
+      }
+  
+      .div1 { grid-area: 1 / 1 / 3 / 4; }
+      .div2 { grid-area: 3 / 1 / 4 / 2; }
+      .div3 { grid-area: 3 / 2 / 4 / 3; }
+      .div4 { grid-area: 3 / 3 / 4 / 4; }
+      .div5 { grid-area: 4 / 1 / 5 / 3; }
+      .div6 { grid-area: 4 / 3 / 5 / 4; }
+      .div7 { grid-area: 5 / 1 / 7 / 2; }
+      .div8 { grid-area: 5 / 2 / 7 / 4; }
+      .div9 { grid-area: 7 / 1 / 9 / 4; }
+      .div10 { grid-area: 9 / 1 / 10 / 2; }
+      .div11 { grid-area: 9 / 2 / 10 / 3; }
+      .div12 { grid-area: 9 / 3 / 10 / 4; }
+      .div13 { grid-area: 10 / 1 / 11 / 4; }
 
     }
-
-    .div1 { grid-area: 1 / 1 / 3 / 4; }
-    .div2 { grid-area: 3 / 1 / 4 / 2; }
-    .div3 { grid-area: 3 / 2 / 4 / 3; }
-    .div4 { grid-area: 3 / 3 / 4 / 4; }
-    .div5 { grid-area: 4 / 1 / 5 / 3; }
-    .div6 { grid-area: 4 / 3 / 5 / 4; }
-    .div7 { grid-area: 5 / 1 / 7 / 2; }
-    .div8 { grid-area: 5 / 2 / 7 / 4; }
-    .div9 { grid-area: 7 / 1 / 9 / 4; }
-    .div10 { grid-area: 9 / 1 / 10 / 2; }
-    .div11 { grid-area: 9 / 2 / 10 / 3; }
-    .div12 { grid-area: 9 / 3 / 10 / 4; }
-    .div13 { grid-area: 10 / 1 / 11 / 4; }
 
   }
 
